--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,7 +5,7 @@
     <title>Magpie Content Mangement System</title>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="app.js"></script>
+    <script src="frontend/app.js"></script>
 </head>
 
 <body>
