--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -30,7 +30,7 @@
           </button>
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav" style="position: absolute; left: 50%; transform: translatex(-50%);">
             <li class="active">
               <a href="">Collections</a>
             </li>
