--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -19,6 +19,10 @@
 	
 </head>
 <body>
+  <div class="container">
+    <div class="jumbotron">
+      <img src="../img/banner.png">
+    </div>
     <div class="navbar navbar-static-top">
       <div class="container">
         <div class="navbar-header">
@@ -53,7 +57,7 @@
         </div>
       </div>
     </div>
-
+  </div>
     {% block content %}
 
     {% endblock %}
