--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -20,8 +20,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
-      <img src="../img/banner.png">
+    <div class="jumbotron" style="background: url('../img/banner.png') no-repeat center center; position: fixed; width: 100%; height: 350px; top:0; left:0; z-index: -1;">
     </div>
     <div class="navbar navbar-static-top">
       <div class="container">
