--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -18,9 +18,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
 	
 </head>
-<body>
+<body style="background: white">
   <div class="container">
-    <div class="jumbotron" style="background: url('../img/banner.png') no-repeat center center; position: fixed; width: 100%; height: 350px; top:0; left:0; z-index: -1;">
+    <div class="jumbotron" style="background: url('../img/banner.png') no-repeat center center; height: 128px; width: 100%; top:0; left:0; z-index: -1; margin-bottom: 0px">
     </div>
     <div class="navbar navbar-static-top">
       <div class="container">
