--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id" content="26847710785-sjlvllgutdi3kbk2favpod5663d9ncm7.apps.googleusercontent.com">
 
   <title>The Magpie App</title>
  
@@ -15,6 +16,11 @@
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">  
   <!-- YOUR STYLES GO HERE -->
   <link rel="stylesheet" href="css/styles.css">	
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="js/login.js"></script>
 	
 </head>
 <body>
@@ -23,7 +29,9 @@
     <div id="wrapper">
        <div id="content">
             <img src="img/mglogo2.png" alt="Magpie Birdhouse">
-            <h1>coming soon</h1>
+            <h1>Login or Create an Account</h1>
+            <center><div class="g-signin2" data-onsuccess="onSignIn"></div></center>
+            <div id="userInfo"></div>
         </div>
         <div id="footer">
             <p>copyright 2017</p>
