starting html work

--- a/app/templates/create.twig
+++ b/app/templates/create.twig
@@ -1,8 +1,14 @@
 {% extends "base.twig" %}
 
 {% block content %}
-    <h1>Index</h1>
-    <p class="important">
-        Welcome to my awesome homepage.
-    </p>
+    <div class="container">
+        <h1>CREATE YOUR COLLECTION</h1>
+        <div class="row">
+            <div class="col-md-9">
+                <label>NAME</label>
+                <label>What is the collection name you'd like scavengers to see?</label> 
+                 <textarea class="form-control" rows="1" id="message"></textarea>
+            </div>
+        </div>
+    </div>
 {% endblock %}
