--- a/app/templates/create.twig
+++ b/app/templates/create.twig
@@ -4,11 +4,13 @@
     <div class="container">
         <h1>CREATE YOUR COLLECTION</h1>
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-2"></div>
+            <div class="col-md-6">
                 <label>NAME</label>
                 <label>What is the collection name you'd like scavengers to see?</label> 
                  <textarea class="form-control" rows="1" id="message"></textarea>
             </div>
+            <div class="col-md-4"></div>
         </div>
     </div>
 {% endblock %}
