--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -1,6 +1,12 @@
 {% extends "base.twig" %}
 
 {% block content %}
+<script src="js/dashboard.js"></script>
+    <script async defer src="https://apis.google.com/js/api.js" 
+        onload="this.onload=function(){};handleClientLoad()" 
+        onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
+    
     <h1>Dashboard</h1>
     <p>
         Content coming soon.
