Added basic pages.

--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -45,22 +45,22 @@
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav" style="position: absolute; left: 50%; transform: translatex(-50%);">
             <li class="active">
-              <a href="">Collections</a>
+              <a href="/collections">Collections</a>
             </li>
             <li class="">
-              <a href="">Create</a>
+              <a href="/create">Create</a>
             </li>
             <li class="">
-              <a href="">Contact Us</a>
+              <a href="/contact">Contact Us</a>
             </li>
             <li class="">
-              <a href="">Legal Stuff</a>
+              <a href="/legal">Legal Stuff</a>
             </li>
             <li class="">
-              <a href="">Account</a>
+              <a href="/account">Account</a>
             </li>
             <li class="">
-              <a href="">Log Out</a>
+              <a href="#" onclick="onSignOut()">Log Out</a>
             </li>
           </ul>
         </div>
