--- a/app/templates/create.twig
+++ b/app/templates/create.twig
@@ -26,24 +26,76 @@
                 <label>Upload a PNG icon that represents your entire colleciton.</label>
                 <div class="row">
                     <div class="col-md-9">
-                        <textarea class="form-control" rows="1" id="superbadge"></textarea>
+                        <textarea class="form-control" rows="1" id="superbadge" readonly></textarea>
                     </div>
                     <div class="col-md-3">
-                        <button type="button" class="btn btn-primary pull-right" id="submit" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Browse</button>
+                        <form method="POST" enctype="multipart/form-data" id="sbupload">
+                            <label class="btn btn-default btn-file" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Browse
+                            <input type="file" name="newfile" style="display: none;" onchange="setName(this.value);">
+                            </label>
+                        </form>
                     </div>
-                    <form method="POST" action="/upload" enctype="multipart/form-data">
-                            <label>Select file to upload:</label>
-                            <input type="file" name="newfile">
-                            <button type="submit">Upload</button>
-                    </form>
                 </div>
                 <div style="padding: 30px"></div>
                 <h4 style="color:#52D291"><strong>BADGE QUANTITY</strong></h4>
                 <div></div>
                 <label>For now, how many badges will be in your collection</label> 
-                <textarea class="form-control" rows="1" id="badgeq" style="width:25%"></textarea> 
+                <textarea class="form-control" rows="1" id="badgeq" style="width:25%"></textarea>
+                <div style="padding: 30px"></div>
+                <h4 style="color:#52D291"><strong>BADGE ORDER</strong></h4>
+                <div></div>
+                <label>Would you like the badges in the collection to be in a specific order?</label>
+                <div></div>
+                <label class="radio-inline"><input type="radio" name="optradio" class="orderCollection" value="1">Yes</label>
+                <label class="radio-inline"><input type="radio" name="optradio" class="orderCollection" value="0">No</label>
+                <div style="padding: 30px"></div> 
             </div>
             <div class="col-md-5"></div>
         </div>
+        <div class="row">
+            <div class="col-md-4">
+                <button id="btn-prev" class="btn btn-default btn-md pull-right" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Previous</button>  
+            </div>
+            <div class="col-md-4 text-center">
+                <button class="btn btn-default btn-md" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-save">Save</button> 
+            </div>
+            <div class="col-md-4">
+                <button class="btn btn-default btn-md pull-left" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-next">Next</button>
+            </div>
+        </div>
+        <div style="padding: 30px"></div>
+        <script>
+        	function setName(name){
+        		var fileName = name.substr(name.lastIndexOf("\\")+1, name.length);
+        		document.getElementById("superbadge").value = fileName;
+        	}
+        </script>
+        <script>
+            $(document).on('click', '#btn-next', function(){
+                //var cid = parseInt($('#cid').text());
+                var name = $("#name").val();
+                var summary = $("#summary").val();
+                var numBadge = $("#badgeq").val();
+                var ordered = $(".orderCollection:checked").val();
+                var cid = {{ cid|json_encode|raw}};
+                var form = $('form')[0]; 
+                var formData = new FormData(form);
+                formData.append("cid", cid);
+                formData.append("name", name);
+                formData.append("summary", summary);
+                formData.append("numBadge", numBadge);
+                formData.append("ordered", ordered);
+                $.ajax({
+                    url:'/database/collection',
+                    type:'post',
+                    data:formData,
+                    contentType: false,
+                    processData: false,
+                    success:function(data){
+                        window.location.href = "/landmarks/" + (parseInt(cid) + 1);
+                    }
+                });
+            });
+        </script>
     </div>
 {% endblock %}
