View collections fetching user.

--- a/app/templates/collections.twig
+++ b/app/templates/collections.twig
@@ -1,8 +1,9 @@
 {% extends "base.twig" %}
 
 {% block content %}
+    <script src="/js/collections.js"></script>
     <div class="container">
         <h1>Your Collections</h1>
-        <p>None available. (for now!)</p>
+        <div id="collections"></div>
     </div>
 {% endblock %}
