--- a/app/public_html/css/styles.css
+++ b/app/public_html/css/styles.css
@@ -39,6 +39,19 @@ p{
     font-weight: 300;
 }
 
+#header{
+    width:100%;
+	height:128px;
+	position:absolute;
+	top:0;
+	left:0;
+    background: #40AAF2; 
+    background: -webkit-linear-gradient(bottom right, #4055F2, #50D2B4); 
+    background: -o-linear-gradient(top left, #4055F2, #50D2B4); 
+    background: -moz-linear-gradient(top left, #4055F2, #50D2B4); 
+    background: url('../img/header.png') no-repeat center center, linear-gradient(to top left, #4055F2, #50D2B4);
+}
+
 #footer {
 	width:100%;
 	height:55px;
