--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -30,7 +30,8 @@
 </head>
 <body style="background: white">
   <div class="container">
-    <div class="jumbotron" style="background: url('../img/banner.png') no-repeat center center; height: 128px; width: 100%; top:0; left:0; z-index: -1; margin-bottom: 0px">
+    <div id="header"></div>
+    <div class="jumbotron" style="background: url('../img/header.png') no-repeat center center; height: 128px; width: 100%; top:0; left:0; z-index: -1; margin-bottom: 0px">
     </div>
     <div class="navbar navbar-static-top">
       <div class="container">
