--- a/app/templates/legal.twig
+++ b/app/templates/legal.twig
@@ -3,5 +3,6 @@
 {% block content %}
     <div class="container">
         <h1>Legal Stuff</h1>
+        <p>For questions and concerns, please email us at ewumagpie@gmail.com</p>
     </div>
 {% endblock %}
