--- a/css/contact.css
+++ b/css/contact.css
@@ -11,15 +11,15 @@ body
     background: -moz-linear-gradient(right, #4055F2, #50D2B4); 
 }
 
-h1, h2, h3, h4, a, p
+h1, h2, h3, p, a
 {
 	font-family: Montserrat;
 }
 
-h1 /*.create-your-collecti*/ 
+h1
 {
-	height: 3.44%;
-	width: 73.89%;
+	height: 58px;
+	width: 820px;
 	color: #A7ACB3;
 	font-size: 48px;
 	font-weight: bold;
@@ -27,19 +27,30 @@ h1 /*.create-your-collecti*/
 	text-align: center;
 }
 
-h4
+h2
 {
 	height: 22px;
-	width: 238.66px;
+	width: 278.09px;
 	color: #40AAF2;
 	font-size: 18px;
 	font-weight: bold;
 	line-height: 22px;
 }
 
+h3
+{
+	height: 2.15%;
+	width: 9.65%;
+	color: #FFFFFF;
+	font-size: 18px;
+	font-weight: bold;
+	line-height: 22px;
+	text-align: center;
+}
+
 a
 {
-	height: 1.07%;
+	height: 1.65%;
 	width: 9.96%;
 	color: #C8CDD5;
 	font-size: 14px;
@@ -48,49 +59,20 @@ a
 	text-align: center;
 }
 
-lable
+p
 {
-	height: 14px;
-	width: 459.56px;
+	height: 28px;
+	width: 582.61px;
 	color: #231F20;
 	font-size: 11px;
 	font-weight: 300;
 	line-height: 14px;
 }
 
-h2
+.btn-send
 {
-	height: 0.83%;
-	width: 4.98%;
-	color: #FFFFFF;
-	font-size: 11px;
-	font-weight: 500;
-	line-height: 14px;
-}
-
-h3
-{
-	height: 22px;
-	width: 98.78px;
-	color: #FFFFFF;
-	font-size: 18px;
-	font-weight: bold;
-	line-height: 22px;
-	text-align: center;
-}
-
-.browse
-{
-	height: 26px;
-	width: 108px;
-	border-radius: 13px;
-	background-color: #40AAF2;
-}
-
-.btn-prev, .btn-save, .btn-next
-{
-	height: 2.37%;
-	width: 19.73%;
+	height: 40px;
+	width: 202px;
 	border-radius: 24px;
 	background-color: #40AAF2;
 }
