--- a/css/legal.css
+++ b/css/legal.css
@@ -11,15 +11,15 @@ body
     background: -moz-linear-gradient(right, #4055F2, #50D2B4); 
 }
 
-h1, h2, h3, h4, a, p
+h1, h2, h3, h4, p, a
 {
 	font-family: Montserrat;
 }
 
-h1 /*.create-your-collecti*/ 
+h1
 {
-	height: 3.44%;
-	width: 73.89%;
+	height: 58px;
+	width: 820px;
 	color: #A7ACB3;
 	font-size: 48px;
 	font-weight: bold;
@@ -27,20 +27,20 @@ h1 /*.create-your-collecti*/
 	text-align: center;
 }
 
-h4
+h2
 {
 	height: 22px;
-	width: 238.66px;
-	color: #40AAF2;
+	width: 278.09px;
+	color: #52D291;
 	font-size: 18px;
 	font-weight: bold;
 	line-height: 22px;
 }
 
-a
+a, h3
 {
-	height: 1.07%;
-	width: 9.96%;
+	height: 18px;
+	width: 102px;
 	color: #C8CDD5;
 	font-size: 14px;
 	font-weight: bold;
@@ -48,30 +48,10 @@ a
 	text-align: center;
 }
 
-lable
-{
-	height: 14px;
-	width: 459.56px;
-	color: #231F20;
-	font-size: 11px;
-	font-weight: 300;
-	line-height: 14px;
-}
-
-h2
-{
-	height: 0.83%;
-	width: 4.98%;
-	color: #FFFFFF;
-	font-size: 11px;
-	font-weight: 500;
-	line-height: 14px;
-}
-
-h3
+h4
 {
 	height: 22px;
-	width: 98.78px;
+	width: 202px;
 	color: #FFFFFF;
 	font-size: 18px;
 	font-weight: bold;
@@ -79,18 +59,20 @@ h3
 	text-align: center;
 }
 
-.browse
+p
 {
-	height: 26px;
-	width: 108px;
-	border-radius: 13px;
-	background-color: #40AAF2;
+	height: 73.32%;
+	width: 56.9%;
+	color: #231F20;
+	font-size: 11px;
+	font-weight: 300;
+	line-height: 14px;
 }
 
-.btn-prev, .btn-save, .btn-next
+.btn-top
 {
-	height: 2.37%;
-	width: 19.73%;
+	height: 40px;
+	width: 202px;
 	border-radius: 24px;
-	background-color: #40AAF2;
+	background-color: #52D291;
 }
