--- a/css/account.css
+++ b/css/account.css
@@ -1,6 +1,32 @@
+html, body
+{
+	height: 100%;
+}
+
 body
 {
 	background: white;
+}
+
+#wrapper
+{
+    min-height: 100%;
+    position: relative;
+}
+
+#content
+{
+	padding-bottom:50px; 
+}
+
+img
+{
+    display: block;
+    margin: auto;
+    padding-top: 4em;
+	overflow: hidden;
+	vertical-align:bottom;
+    border:0;
 }
 
 .jumbotron
@@ -18,8 +44,6 @@ h1, h2, h3, h4, p, a
 
 h1
 {
-	height: 58px;
-	width: 820px;
 	color: #A7ACB3;
 	font-size: 48px;
 	font-weight: bold;
@@ -29,8 +53,6 @@ h1
 
 h2
 {
-	height: 22px;
-	width: 278.09px;
 	color: #52D291;
 	font-size: 18px;
 	font-weight: bold;
@@ -39,8 +61,6 @@ h2
 
 a, h3
 {
-	height: 18px;
-	width: 102px;
 	color: #C8CDD5;
 	font-size: 14px;
 	font-weight: bold;
@@ -50,9 +70,6 @@ a, h3
 
 p
 {
-	
-	height: 73.32%;
-	width: 56.9%;
 	color: #231F20;
 	font-size: 11px;
 	font-weight: 300;
@@ -61,8 +78,6 @@ p
 
 h4
 {
-	height: 22px;
-	width: 202px;
 	color: #FFFFFF;
 	font-size: 18px;
 	font-weight: bold;
@@ -76,4 +91,56 @@ h4
 	width: 202px;
 	border-radius: 24px;
 	background-color: #52D291;
+}
+
+#footer
+{
+	width:100%;
+	height:55px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
+/********************
+MEDIA QUERIES
+*******************/
+/* Mobile: 320px = 20em */
+@media screen and (min-width: 20em)
+{ 
+    img
+	{
+        max-height: 60%;
+        max-width: 60%;
+    }
+	
+	.row.equal 
+	{
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+}
+
+/* Tablet:  768px = 160em */
+@media screen and (min-width: 48em)
+{
+    img
+	{
+        max-hight: 20em;
+        max-width: 20em;
+    }
+	
+	.row.equal 
+	{
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+}
+
+/* Desktop: 1280px = 80em */
+@media screen and (min-width: 80em)
+{
+
 }
