--- a/css/contact.css
+++ b/css/contact.css
@@ -37,6 +37,24 @@ img
     background: -moz-linear-gradient(right, #4055F2, #50D2B4); 
 }
 
+ul
+{
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+	width: 60%;
+	position: absolute;
+	left: 60%;
+	transform: translatex(-60%);
+}
+
+li
+{
+	float: center;
+	display: inline;
+}
+
 h1, h2, h3, p, a
 {
 	font-family: Montserrat;
