Some CSS stuff.

--- a/app/templates/base.twig
+++ b/app/templates/base.twig
@@ -14,8 +14,8 @@
   <!-- Normalize CSS makes browsers render all elements more consistently -->
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">  
   <!-- YOUR STYLES GO HERE -->
-  <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	
+  <link rel="stylesheet" href="/css/styles.css">
 	
   <script src="/js/login.js"></script>
   <script async defer src="https://apis.google.com/js/api.js" 
@@ -29,9 +29,9 @@
 
 </head>
 <body style="background: white">
+  <div class="jumbotron">
   <div class="container">
     <div id="header"></div>
-    <div class="jumbotron" style="background: url('../img/header.png') no-repeat center center; height: 128px; width: 100%; top:0; left:0; z-index: -1; margin-bottom: 0px">
     </div>
     <div class="navbar navbar-static-top">
       <div class="container">
@@ -44,24 +44,24 @@
           </button>
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-          <ul class="nav navbar-nav" style="position: absolute; left: 50%; transform: translatex(-50%);">
+          <ul class="nav navbar-nav">
             <li class="active">
-              <a href="/collections">Collections</a>
+              <a href="/collections">COLLECTIONS</a>
             </li>
             <li class="">
-              <a href="/create">Create</a>
+              <a href="/create">CREATE</a>
             </li>
             <li class="">
-              <a href="/contact">Contact Us</a>
+              <a href="/contact">CONTACT US</a>
             </li>
             <li class="">
-              <a href="/legal">Legal Stuff</a>
+              <a href="/legal">LEGAL STUFF</a>
             </li>
             <li class="">
-              <a href="/account">Account</a>
+              <a href="/account">ACCOUNT</a>
             </li>
             <li class="">
-              <a href="#" onclick="onSignOut()">Log Out</a>
+              <a href="#" onclick="onSignOut()">LOG OUT</a>
             </li>
           </ul>
         </div>
