--- a/app/templates/create.twig
+++ b/app/templates/create.twig
@@ -1,6 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
+<link rel="stylesheet" href="/css/create.css">
     <div class="container">
         <h1>CREATE YOUR COLLECTION</h1>
         <div class="row">
@@ -30,7 +31,7 @@
                     </div>
                     <div class="col-md-3">
                         <form method="POST" enctype="multipart/form-data" id="sbupload">
-                            <label class="btn btn-default btn-file" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Browse
+                            <label class="btn btn-default btn-file" id="browse">Browse
                             <input type="file" name="newfile" style="display: none;" onchange="setName(this.value);">
                             </label>
                         </form>
@@ -54,13 +55,13 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <button id="btn-prev" class="btn btn-default btn-md pull-right" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Previous</button>  
+                <button id="btn-prev" class="btn btn-default btn-md pull-right" >Previous</button>  
             </div>
             <div class="col-md-4 text-center">
-                <button class="btn btn-default btn-md" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-save">Save</button> 
+                <button class="btn btn-default btn-md" id="btn-save">Save</button> 
             </div>
             <div class="col-md-4">
-                <button class="btn btn-default btn-md pull-left" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-next">Next</button>
+                <button class="btn btn-default btn-md pull-left" id="btn-next">Next</button>
             </div>
         </div>
         <div style="padding: 30px"></div>
