--- a/app/templates/landmarks.twig
+++ b/app/templates/landmarks.twig
@@ -1,23 +1,115 @@
 {% extends "base.twig" %}
 
 {% block content %}
-    <div class="container">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+    <script src="/js/landmark.js"></script>
+    <script>
+        var data = JSON.parse({{landmarks|json_encode|raw}});
+        var desc = JSON.parse({{landmarkDesc|json_encode|raw}});
+        $(document).ready(function () {
+            onLoad({{numBadge}});
+            if({{incomingData}} == 1){
+                var existing = {{numCount}};
+                for(i = 1; i <= existing; i++){
+                    lids[i] = data[i-1].LID;
+                    $("#name" + i).val(data[i-1].Name);
+                    for(var x in desc){
+                        //console.log(x);
+                        if(desc[x].LID == data[i-1].LID){
+                            $("#description" + i).val(desc[x].Description);
+                        }
+                    }
+                    //$("#description" + i).val(desc[])
+                }
+                for(i=existing+1; i <= {{numBadge}}; i++){
+                    lids[i] = -1;
+                }
+            }else{
+                for(y = 1; y <= {{numBadge}}; y++){
+                    lids[y] = -1;
+                }
+            }
+        });
+        $( document ).ready(function() {
+            $('.collapse').on('shown.bs.collapse', function () {
+                myMap(this.id);
+            });
+        });
+    </script>
+    <div class="container" id="badgeContainer">
         <h1>BUILD YOUR BADGES</h1>
         <div>These badges will belong to the collection with cid = {{cid}}</div>
+        <div>Number of badges in the database is {{numBadge}}</div>
+    </div>
+    <div class="container">
         <div class="panel panel-default">
-            <div class="panel-body text-center" style="background-color: #52D291">Badge One</div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-body text-center" style="background-color: #52D291">Badge Two</div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-body text-center" style="background-color: #52D291">Badge Three</div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-body text-center" style="background-color: #52D291">Badge Four</div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-body text-center" style="background-color: #52D291">Badge Five</div>
+            <div class="panel-body text-center" style="background-color: #C8CDD5" onclick="append();">Add Another Badge</div>
         </div>
     </div>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9s43u7fI0DPFQ07aCYMuHGl47S3_-JtU&callback=myMap"></script>
+    <script>
+        function setNameImg(name, id){
+            var fileName = name.substr(name.lastIndexOf("\\")+1, name.length);
+            document.getElementById("picname" + id).value = fileName;
+        }
+        function setNameLogo(name, id){
+            var fileName = name.substr(name.lastIndexOf("\\")+1, name.length);
+            document.getElementById("logoname" + id).value = fileName;
+        }
+    </script>
+    <script>
+        $( document ).ready(function() {
+            $('.collapse').on('hidden.bs.collapse', function () {
+                var id = this.id;
+                alert(id);
+                var name = $("#name" + this.id).val();
+                var description = $("#description" + this.id).val();
+                var lat = $("#lat" + this.id).val();
+                var long = $("#long" + this.id).val();
+                var file1 = $("#pic" + this.id)[0].files[0];
+                var file2 = $("#logo" + this.id)[0].files[0];
+                var file1name = $("#picname" + this.id).val();
+                var file2name = $("#logoname" + this.id).val();
+                var cid = {{ cid|json_encode|raw}};
+                //var form = $('form')[0];
+                //var formData = new FormData(form);
+                var formData = new FormData();
+                formData.append("cid", cid);
+                formData.append("file1", file1, file1name);
+                formData.append("file2", file2, file2name);
+                formData.append("name", name);
+                formData.append("lat", lat);
+                formData.append("long", long);
+                formData.append("description", description);
+
+                if(lids[this.id] != -1){
+                    alert("closed");
+                    $.ajax({
+                        url:'/database/landmark/update/' + lids[id],
+                        type:'post',
+                        data:formData,
+                        contentType: false,
+                        processData: false,
+                        success:function(data){
+                            alert("done");
+                        }
+                    });
+                }else{
+                    $.ajax({
+                        url:'/database/landmark',
+                        type:'post',
+                        data:formData,
+                        contentType: false,
+                        processData: false,
+                        success:function(data){
+                            alert(data);
+                            alert(id);
+                            lids[id] = data;
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 {% endblock %}
