--- a/app/templates/collections.twig
+++ b/app/templates/collections.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <script src="/js/collections.js"></script>
     <div class="container">
-        <h1>Your Collections</h1>
+        <h1>MY COLLECTIONS</h1>
         <div id="collections"></div>
     </div>
 {% endblock %}
