--- a/css/collections.css
+++ b/css/collections.css
@@ -16,7 +16,7 @@ body
 
 #content
 {
-	padding-bottom:50px; 
+		padding-bottom:50px; 
 }
 
 img
@@ -24,23 +24,19 @@ img
     display: block;
     margin: auto;
     padding-top: 4em;
-	overflow: hidden;
-	vertical-align:bottom;
+		overflow: hidden;
+		vertical-align:bottom;
     border:0;
 }
 
 .jumbotron
 {
-    background: #40AAF2; 
-    background: -webkit-linear-gradient(left, #4055F2, #50D2B4); 
-    background: -o-linear-gradient(right, #4055F2, #50D2B4); 
-    background: -moz-linear-gradient(right, #4055F2, #50D2B4);
-	height: 128px; 
-	width: 100%; 
-	top:0; 
-	left:0; 
-	z-index: -1; 
-	margin-bottom: 0px
+	  background: url(../img/MagpieOld.png) no-repeat center center;
+    background-color: #000000;
+	  background-size: contain;
+		height: 128px; 
+		width: 100%;
+		margin-bottom: 0px
 }
 
 ul
