--- a/app/templates/contact.twig
+++ b/app/templates/contact.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <h1>Contact Information</h1>
+        <h1>CONTACT US</h1>
         <p>For questions and concerns, please email us at ewumagpie@gmail.com</p>
     </div>
 {% endblock %}
