Super small change

--- a/app/templates/awards.twig
+++ b/app/templates/awards.twig
@@ -54,7 +54,7 @@
                     contentType: false,
                     processData: false,
                     success:function(data){
-                        window.location.href = "/collections;
+                        window.location.href = "/collections";
                     }
                 });
             });
