--- a/app/templates/awards.twig
+++ b/app/templates/awards.twig
@@ -1,7 +1,6 @@
 {% extends "base.twig" %}
 
 {% block content %}
-<script src="/js/awards.js"></script>
     <div class="container">
         <h1>ASSIGN YOUR AWARD</h1>
         <div class="row">
@@ -18,9 +17,9 @@
                 <textarea class="form-control" rows="1" id="locationName"></textarea>
                 <div style="padding: 15px"></div>
 				<label><small>Click to enter a pin on the map or enter the latitude and longitude for the award location.</small></label>
-				<div style="padding: 10px"></div>
 				<div id="map" style="width:500px;height:500px;"></div>
 				<script>
+					var marker;
 					function myMap() {
 					var mapCanvas = document.getElementById("map");
 					var mapOptions = {
@@ -34,32 +33,42 @@
 					}
 					
 					function placeMarker(map, location) {
-					var marker = new google.maps.Marker({
-					position: location,
-					map: map
-					});
+					  if (marker) {
+						marker.setPosition(location);
+					  } 
+					  else {
+						marker = new google.maps.Marker({
+						position: location,
+						map: map
+					  });
+					}
 					var tempLoc = String(location).substring(1,String(location).length-2).split(",");
-					document.getElementById('lat').value = tempLoc[0];
-					document.getElementById('long').value = tempLoc[1].substring(1,tempLoc[1].length-1);
-					//alert(String(location).split(",")[0]);
+					var markerPosition = marker.getPosition();
+					populateInputs(markerPosition);
 					var infowindow = new google.maps.InfoWindow({
 						content: 'Latitude: ' + location.lat() + '<br>Longitude: ' + location.lng()
 					});
 						infowindow.open(map,marker);
 					}
+					
+					function populateInputs(pos) {
+						document.getElementById("latitude").value = pos.lat()
+						document.getElementById("longitude").value = pos.lng();
+					}
 				</script>
 				<script async defer
 					src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAueqfdhE5KaeiKc1qZjNeyBvVbvNrY9bU&callback=myMap">
 				</script>
-				<div style="padding: 15px"></div>
-				<label style="color:#52D291"> -or- </label>
+				<div style="padding: 5px"></div>
+				<label style="color:#52D291; font-size:18px; margin-left:170px;"> -or- </label>
+				<div style="padding:5px"></div>
 				<div class="ui-grid-a">
 				<div data-role = "fieldcontain" class = "ui-hide-label ui-block-a">
 					<input type="text" name="lat" id="latitude" value="" placeholder="Latitude"/>
 					<input type="text" name="long" id="longitude" value="" placeholder="Longitude"/>
 				</div>
 				</div>
-				<div style="padding: 15px"></div> 
+				<div style="padding: 15px"></div>
                 <h4 style="color:#52D291"><strong>TERMS AND CONDITIONS (optional)</strong></h4>
                 <div></div>
                 <label>If any terms or conditions apply to the award or to the collection of the award, please state or describe them below.</label> 
@@ -85,10 +94,14 @@
                 var name = $("#name").val();
 				var optionalConditions = $("#optionalConditions").val();
                 var cid = {{ cid|json_encode|raw}};
+				var latitude = $("#latitude").val();
+				var longitude = $("#longitude").val();
                 var form = $('form')[0]; 
                 var formData = new FormData(form);
                 formData.append("cid", cid);
                 formData.append("name", name);
+				formData.append("latitude", latitude);
+				formData.append("longitude", longitude);
 				formData.append("optionalConditions", optionalConditions);
                 $.ajax({
                     url:'/add/awards',
