--- a/app/templates/landmarks.twig
+++ b/app/templates/landmarks.twig
@@ -49,6 +49,19 @@
         </div>
     </div>
 
+    <div class="row">
+            <div class="col-md-4">
+                <button id="btn-prev" class="btn btn-default btn-md pull-right" onClick="window.location.href = '/edit/{{cid}}';">Previous</button>  
+            </div>
+            <div class="col-md-4 text-center">
+                <button class="btn btn-default btn-md" id="btn-save">Save</button> 
+            </div>
+            <div class="col-md-4">
+                <button class="btn btn-default btn-md pull-left" id="btn-next" onClick="window.location.href = '/awards/{{cid}}';">Next</button>
+            </div>
+        </div>
+        <div style="padding: 30px"></div>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9s43u7fI0DPFQ07aCYMuHGl47S3_-JtU&callback=myMap"></script>
     <script>
         function setNameImg(name, id){
