oops missed a couple statments

--- a/app/templates/landmarks.twig
+++ b/app/templates/landmarks.twig
@@ -94,7 +94,7 @@
                         contentType: false,
                         processData: false,
                         success:function(data){
-                            alert("done");
+                            //alert("done");
                         }
                     });
                 }else{
@@ -105,8 +105,8 @@
                         contentType: false,
                         processData: false,
                         success:function(data){
-                            alert(data);
-                            alert(id);
+                            //alert(data);
+                            //alert(id);
                             lids[id] = data;
                         }
                     });
