--- a/app/templates/create.twig
+++ b/app/templates/create.twig
@@ -64,7 +64,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <button id="btn-prev" class="btn btn-default btn-md pull-right" >Previous</button>
+                <button id="btn-prev" onClick="window.location.href = '/collections'" class="btn btn-default btn-md pull-right" >Previous</button>
             </div>
             <div class="col-md-4 text-center">
                 <button class="btn btn-default btn-md" id="btn-save">Save</button>
