--- a/app/templates/landmarks.twig
+++ b/app/templates/landmarks.twig
@@ -49,6 +49,19 @@
         </div>
     </div>
 
+            <div class="row">
+            <div class="col-md-4">
+                <button id="btn-prev" onClick="window.location.href = '/edit/' + {{cid}}" class="btn btn-default btn-md pull-right" style="border-radius: 17px; background: #52D291; padding-left: 30px; padding-right: 30px;">Previous</button>  
+            </div>
+            <div class="col-md-4 text-center">
+                <button class="btn btn-default btn-md" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-save">Save</button> 
+            </div>
+            <div class="col-md-4">
+                <button class="btn btn-default btn-md pull-left" onClick="window.location.href = '/awards/' + {{cid}}" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-next">Next</button>
+            </div>
+        </div>
+        <div style="padding: 30px"></div>
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9s43u7fI0DPFQ07aCYMuHGl47S3_-JtU&callback=myMap"></script>
     <script>
         function setNameImg(name, id){
