Added missing id tag

--- a/app/templates/landmarks.twig
+++ b/app/templates/landmarks.twig
@@ -53,7 +53,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <div class="panel panel-default">
-                    <div class="panel-body text-center" style="background-color: #C8CDD5" onclick="append({{cid|json_encode|raw}});">Add Another Badge</div>
+                    <div id="newBadge" class="panel-body text-center" style="background-color: #C8CDD5" onclick="append({{cid|json_encode|raw}});">Add Another Badge</div>
                 </div>
             </div>
             <div class="col-md-2"></div>
