--- a/app/templates/create.twig
+++ b/app/templates/create.twig
@@ -101,7 +101,7 @@
                     contentType: false,
                     processData: false,
                     success:function(data){
-                        window.location.href = "/landmarks/" + (parseInt(cid) + 1);
+                        window.location.href = "/landmarks/" + (parseInt(cid));
                     }
                 });
             });
