--- a/app/templates/awards.twig
+++ b/app/templates/awards.twig
@@ -91,30 +91,33 @@
         <div style="padding: 30px"></div>
         <script>
             $(document).on('click', '#btn-next', function(){
-                var name = $("#name").val();
-				var locationName = $("#locationName").val();
-				var optionalConditions = $("#optionalConditions").val();
-                var cid = {{ cid|json_encode|raw}};
-				var latitude = $("#latitude").val();
-				var longitude = $("#longitude").val();
-                var form = $('form')[0]; 
-                var formData = new FormData(form);
-                formData.append("cid", cid);
-                formData.append("name", name);
-				formData.append("locationName", locationName);
-				formData.append("latitude", latitude);
-				formData.append("longitude", longitude);
-				formData.append("optionalConditions", optionalConditions);
-                $.ajax({
-                    url:'/add/awards',
-                    type:'post',
-                    data:formData,
-                    contentType: false,
-                    processData: false,
-                    success:function(data){
-                        window.location.href = "/collections";
-                    }
-                });
+                var r = confirm("Are you finished with your changes?");
+                if (r == true){
+					var name = $("#name").val();
+					var locationName = $("#locationName").val();
+					var optionalConditions = $("#optionalConditions").val();
+					var cid = {{ cid|json_encode|raw}};
+					var latitude = $("#latitude").val();
+					var longitude = $("#longitude").val();
+					var form = $('form')[0]; 
+					var formData = new FormData(form);
+					formData.append("cid", cid);
+					formData.append("name", name);
+					formData.append("locationName", locationName);
+					formData.append("latitude", latitude);
+					formData.append("longitude", longitude);
+					formData.append("optionalConditions", optionalConditions);
+					$.ajax({
+						url:'/add/awards',
+						type:'post',
+						data:formData,
+						contentType: false,
+						processData: false,
+						success:function(data){
+							window.location.href = "/collections";
+						}
+					});
+				}
             });
         </script>
     </div>
