--- a/app/templates/landmarks.twig
+++ b/app/templates/landmarks.twig
@@ -68,7 +68,7 @@
                 <button class="btn btn-default btn-md" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-save">Save</button>
             </div>
             <div class="col-md-4">
-                <button class="btn btn-default btn-md pull-left" onClick="window.location.href = '/awards/' + {{cid}}" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-next">Next</button>
+                <button class="btn btn-default btn-md pull-left" style="border-radius: 17px; background: #52D291; padding-left: 40px; padding-right: 40px;" id="btn-next">Next</button>
 
             </div>
         </div>
@@ -103,6 +103,13 @@
                             //alert("done");
                         }
                 });
+            });
+
+            $('#btn-next').on('click', function(){
+                var r = confirm("Are you finished with your changes?");
+                if (r == true){
+                    window.location.href = '/awards/' + {{cid}};
+                }
             });
 
             $('.collapse').on('hidden.bs.collapse', function () {
